# backup-sync-tool

./: -OutputPath  .gitignore  AGENTS.md  BACKUP_SYNC_COMMUNICATION_SPEC.md  CMakeLists.txt  Cargo.toml  FEATURE_CHECKLIST.md  FEATURE_GAPS.md  GREENFIELD_REBUILD_PLAN.md  README.md  RUST_FOLDER_LOCK_IMPLEMENTATION.md  RUST_LICENSE_INSPECTOR_INTEGRATION_TASKS.md  RUST_PAIRING_SIMPLIFICATION_TASKS.md  SPEC.md  backupsynctool.json  build-local.ps1  build-macos.sh  build-win7.ps1  build-windows.ps1  build-windows.sh  build.rs  license-inspector.md  mockups.html  push-build-win10.sh  release.ps1  release.sh
.cursor/: hooks.json
.github/workflows/: release.yml
.run/: WebDavSync.run.xml
assets/: AppIcon.icns  render-icons.py
build-mingw/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
dev/minio/: bootstrap.sh  docker-compose.yml  e2e-chunk-roundtrip.sh
docs/plans/: 2026-07-11-HANDOFF.md  2026-07-11-s3-minio-client.md  2026-07-11-s3-rui-cam-ops.md
legacy-cpp-code/: README.md  design-prompt.md
legacy-cpp-code/src/: app.cpp  config.h  dpapi.h  main.cpp  resource.h  resource.rc  sync_engine.cpp  webdav_client.h
legacy-win32/: CMakeLists.txt  build.ps1
license-inspector/: Program.cs  README.md  license-inspector.csproj
mockups/: macos-status-window.html
portable-win/src/WebDavSync.Portable/: App.xaml  App.xaml.cs  ConfigStore.cs  Logger.cs  MainWindow.xaml  MainWindow.xaml.cs  RemoteFolderDialog.xaml  RemoteFolderDialog.xaml.cs  SecretStore.cs  SyncEngine.cs  UpdateService.cs  WebDavClient.cs  WebDavSync.Portable.csproj
proxmox/: win10-build-vm.md
rust/: AGENTS.md  Cargo.toml
rust/src/: config.rs  main.rs  ui.rs  updater.rs  webdav.rs
scripts/: CaptureWindow.cs  capture_window.ps1  ensure-macos-sign-identity.sh  push-build-win10.sh  render_bridge_icons.py  win10-build-bootstrap-paste.txt  win10-build-bootstrap.ps1
src/: app.cpp  app.h  app.rs  config.cpp  config.h  config.rs  dpapi.cpp  file_scanner.cpp  file_scanner.h  host.rs  logs.rs  main.cpp  main.rs  pairing.rs  paths.rs  resource.rc  secret.rs  sync.rs  sync_engine.cpp  sync_engine.h  syncthing.rs  tray.rs  ui.rs  updater.rs  webdav.rs  webdav_client.cpp  webdav_client.h  webdav_folder_dialog.cpp  webdav_folder_dialog.h  xd.rs
src/macos/: brand.rs  instance.rs  launchd.rs  menubar.rs  mod.rs  notify.rs  popover.rs  status_window.rs
src/sync/: chunker.rs  client.rs  mod.rs  state.rs  store.rs  watch.rs
src/transport/: download.rs  mod.rs
src/transport/s3/: mod.rs  multipart.rs
src/ui/: activity.rs  commands.rs  common.rs  create.rs  draw.rs  entry.rs  messages.rs  paint.rs  pair_qr.rs  startup.rs  utils.rs
tools/license-inspector/: Program.cs  README.md
