[package]
name = "backupsynctool"
version = "2026.0.3"
edition = "2021"

[[bin]]
name = "backupsynctool"
path = "src/main.rs"

[dependencies]
# Win32 API bindings — only features we actually use
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_System_Registry",
    "Win32_Security_Cryptography",
] }

bytemuck = "1"

# JSON config
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (blocking, no async runtime)
ureq = { version = "2", features = ["tls"] }
quick-xml = "0.31"

# File watching
notify = { version = "6" }

# Base64 for DPAPI blob serialisation
base64 = "0.22"
rsa = "0.9"
unicode-normalization = "0.1"

# Local QR code generation for device pairing
qrcodegen = "1"

[profile.release]
opt-level = "z"       # optimise for size
lto = true            # link-time optimisation
codegen-units = 1     # single codegen unit for max LTO
strip = true          # strip debug symbols
panic = "abort"       # no unwinding machinery

[build-dependencies]
# embed manifest + icon into the .exe
winres = "0.1"
