[package]
name = "backupsynctool"
version = "2026.1.1"
edition = "2021"

[[bin]]
name = "backupsynctool"
path = "src/main.rs"

[dependencies]
bytemuck = "1"

# JSON config
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (blocking, no async runtime)
ureq = { version = "2", features = ["tls"] }

# Chunk hashing for Option H sync engine
sha2 = "0.10"
hex = "0.4"

# Base64 for DPAPI blob serialisation
base64 = "0.22"
rsa = "0.9"
unicode-normalization = "0.1"

# Local QR code generation for device pairing
qrcodegen = "1"

# PNG decode for bridge/status icons (assets/bridge-*.png)
image = { version = "0.25", default-features = false, features = ["png"] }

# Win32 API bindings — Windows targets only
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_System_Registry",
    "Win32_System_SystemInformation",
    "Win32_Security_Cryptography",
    "Win32_Storage_FileSystem",
] }

# Keychain + menubar (macOS)
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"
tray-icon = { version = "0.24", default-features = false }
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSString",
    "NSThread",
    "NSData",
    "NSURL",
    "NSGeometry",
    "NSValue",
    "NSArray",
    "NSDictionary",
    "NSAttributedString",
] }
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSRunningApplication",
    "NSResponder",
    "NSAlert",
    "NSImage",
    "NSImageView",
    "NSView",
    "NSWindow",
    "NSPanel",
    "NSButton",
    "NSButtonCell",
    "NSTextField",
    "NSControl",
    "NSCell",
    "NSColor",
    "NSFont",
    "NSWorkspace",
    "NSGraphics",
    "NSBox",
    "NSScrollView",
    "NSClipView",
    "NSScroller",
    "NSProgressIndicator",
    "NSParagraphStyle",
    "NSVisualEffectView",
    "NSScreen",
    "NSEvent",
    "NSMenu",
    "NSMenuItem",
    "NSStatusItem",
    "NSStatusBarButton",
    "NSAttributedString",
    "objc2-quartz-core",
] }
dispatch = "0.2"

[profile.release]
opt-level = "z"       # optimise for size
lto = true            # link-time optimisation
codegen-units = 1     # single codegen unit for max LTO
strip = true          # strip debug symbols
panic = "abort"       # no unwinding machinery

# embed manifest + icon into the .exe (Windows host/target only)
[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
